# learn-substrate

./: README.md
learn-substrate-pallets-collections/pallets/collectibles/: Cargo.toml
learn-substrate-pallets-collections/runtime/: Cargo.toml
learn-substrate-pallets-contract/: README.md  bi.sh
substrate-node-template/runtime/: Cargo.toml
substrate-node-template/runtime/src/: lib.rs
substrate-pallets/: Cargo.toml
substrate-pallets/pallets/collectibles/: Cargo.toml
substrate-pallets/pallets/collectibles/src/: lib.rs
substrate-pallets/runtime/src/: lib.rs
